# LangGraph-Research-Orchestrator

./: .gitignore  README.md  pyproject.toml
assets/: Chatbot-CLI.txt
data/: checkpoints.db-shm  checkpoints.db-wal
logs/: session_20ee7b3a-32af-46af-ba39-36cf4b3011a5.txt  session_2969d054-76f6-4bb5-92a3-9df598f8cf2b.txt  session_b1dff490-9b32-4d51-985b-a96bec25369a.txt  session_b44b9d96-16a6-4947-a18f-418eadc278de.txt  session_bb7ccef8-eeac-4bcf-871c-63202d67bbcd.txt  session_ea67c853-6476-4821-9bf2-20fb004a1d88.txt
output/: AI_Scientific_Discovery_ChatGPT_Report.md  Block-NeRF_Scalable_Large_Scene_Neural_View_Synthesis.md  Block-NeRF_Summary.md
src/agent/: graph.py  logging_utils.py  prompts.py  tools.py
src/client/: app.py
src/scripts/: chatbot_cli.py  cli.py  ingest_file.py
src/server/: main.py
src/tests/: reproduce_loop.py  test_agent.py  test_mcp.py  test_persistence.py  test_streaming_trace.py
